fix: 修复块引用数量标志被块滚动条覆盖问题 | Fix the issue that the block quote number flag is covered by the block scrollbar.

--- a/style/module/block.less
+++ b/style/module/block.less
@@ -5,6 +5,7 @@
         >.protyle-attr {
             >.protyle-attr--refcount {
                 box-shadow: 0 0 var(--custom-toolbar-tiem-active-box-shadow-spread) 0 var(--custom-box-shadow-color);
+                z-index:1; // 避免被块滚动条覆盖
             }
         }
     }
